# mecademic-description

mecademic_description/: CMakeLists.txt  package.xml
mecademic_description/launch/: view_meca500_r3.launch.py
mecademic_description/ros2_control/: meca_500_r3_ecat.ros2_control.xacro  meca_500_r3_tcpip.ros2_control.xacro
mecademic_description/urdf/: meca_500_r3.ros2_control.xacro  meca_500_r3.urdf.xacro  meca_500_r3.xacro  meca_500_r3_ecat.urdf.xacro  meca_500_r3_macro.xacro  meca_500_r3_tcpip.urdf.xacro
